# avrtc

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
base/: codec.cc  codec.h  codec_type.cc  codec_type.h  rtp.cc  rtp.h  sdp.cc  sdp.h  socket.cc  socket.h  thread.cc  thread.h  utils.cc  utils.h
example/: client.cc  client.h  server.cc  ui.cc  ui.h
tests/: codec.cc  rtp.cc  sdp.cc
